artf650666 : Framework 2.1:If description length is increased then icons in that page getting misaligned - Fixed artf661214 : framework 2.2:Text fields mismatch in Add to repo pop up - Fixed artf663687 : Framework2.2:Once clicking close button after starting the hub, framework keeps on streaming - Fixed artf650587 : JnJ Customer Related Queries

--- a/phresco-framework-web/src/main/webapp/theme/photon/css/phresco_default.css
+++ b/phresco-framework-web/src/main/webapp/theme/photon/css/phresco_default.css
@@ -5880,6 +5880,10 @@ input[class*='chckBxAlign'] {
 	padding: 0 0 0 10px !important;
 }
 
+.repo-tab-width{
+	width: 100px;
+	}
+
 .table-chkbx {
 	width: 20px;
 }
@@ -6488,6 +6492,12 @@ color: #313131;
 }
 .controls #password {
 	width: 295px !important;
+}
+
+.controls #userName {
+	width: 295px !important;
+	border: 1px solid #ccc !important;
+	padding: 2px 0px 7px 4px !important;
 }
 
 .envLabel {
